gcc/testsuite/gdc.test/compilable/imports/test9692b.d
module imports.test9692b;
int k;
