gcc/testsuite/gdc.test/fail_compilation/fail22121/imports/test22121/package.d
module fail22121.imports.test22121;
